# agentic-career-assistant

./: README.md  main.py  pyproject.toml
app/rag/: chroma_store.py  loader.py
app/rag/chroma/: chroma.sqlite3
chroma/: chroma.sqlite3
data/: portfolio.csv  resume.txt
db/: chroma.sqlite3
